# statics

./: README.md  bindvar.py  const.py  consts.py  pyproject.toml  statics.py  test_bindvar.py  test_const.py  test_consts.py  test_statics.py
.github/workflows/: build.yml  test.yml
