[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "statics"
authors = [{name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/ntessore/statics"
Issues = "https://github.com/ntessore/statics/issues"

[tool.flit.sdist]
exclude = [".*"]
